add in website all 50 kb compress image

--- a/MahaMetro.html
+++ b/MahaMetro.html
@@ -27,7 +27,7 @@
   <meta property="og:title" content="Maha Metro Website - Enterprise ASP.NET MVC Development | Swastik Dharpure">
   <meta property="og:description"
     content="Official Maha Metro Rail website with multilingual support and enterprise-grade architecture. Transportation sector development expert.">
-  <meta property="og:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/portfolio/MahaMetro.png">
+  <meta property="og:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/portfolio/MahaMetro.jpeg">
   <meta property="og:url" content="https://swastikdharpure.github.io/Portfolio/MahaMetro.html">
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="Swastik Dharpure Portfolio">
@@ -85,7 +85,7 @@
       },
       "datePublished": "2023-01-15",
       "dateModified": "2024-12-01",
-      "image": "https://swastikdharpure.github.io/Portfolio/assets/img/portfolio/MahaMetro.png",
+      "image": "https://swastikdharpure.github.io/Portfolio/assets/img/portfolio/MahaMetro.jpeg",
       "mainEntityOfPage": {
         "@type": "WebPage",
         "@id": "https://swastikdharpure.github.io/Portfolio/MahaMetro.html"
@@ -140,7 +140,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/android-chrome-512x512.png">
-  <link rel="manifest" href="assets/img/favicon/site.webmanifest">
+  <link rel="manifest" href="site.webmanifest">
 
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
   <link rel="dns-prefetch" href="https://fonts.gstatic.com">
@@ -263,7 +263,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/MahaMetro.png" loading="lazy" alt="Maha Metro">
+                  <img src="assets/img/portfolio/MahaMetro.jpeg" loading="lazy" alt="Maha Metro">
                 </div>
 
                 <div class="swiper-slide">
