--- a/Littera.html
+++ b/Littera.html
@@ -139,7 +139,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/android-chrome-512x512.png">
-  <link rel="manifest" href="assets/img/favicon/site.webmanifest">
+  <link rel="manifest" href="site.webmanifest">
 
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
   <link rel="dns-prefetch" href="https://fonts.gstatic.com">
