--- a/NagpurMetro.html
+++ b/NagpurMetro.html
@@ -167,7 +167,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/android-chrome-512x512.png">
-  <link rel="manifest" href="assets/img/favicon/site.webmanifest">
+  <link rel="manifest" href="site.webmanifest">
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="apple-mobile-web-app-title" content="Swastik" />
