--- a/index.html
+++ b/index.html
@@ -1286,19 +1286,19 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js?v=1.0" defer></script>
   <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
-  <script src="assets/vendor/aos/aos.js" defer></script>
-  <script src="assets/vendor/typed.js/typed.umd.js" defer></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js" defer></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js" defer></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js" defer></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js" defer></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js" defer></script>
+  <script src="assets/vendor/aos/aos.js?v=1.0" defer></script>
+  <script src="assets/vendor/typed.js/typed.umd.js?v=1.0" defer></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js?v=1.0" defer></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js?v=1.0" defer></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js?v=1.0" defer></script>
+  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js?v=1.0" defer></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js?v=1.0" defer></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js?v=1.0" defer></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.min.js" defer></script>
+  <script src="assets/js/main.min.js?v=1.0" defer></script>
 
 </body>
 
