--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
   <main class="main">
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-      <img src="assets/img/hero-bg.jpg" alt="Swastik Dharpure, Software Developer with abstract background"
+      <img src="assets/img/SwastikDharpure.webp" alt="Swastik Dharpure, Software Developer with abstract background"
         data-aos="fade-in" class="" loading="eager">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
