add in website bg image responsive add

--- a/index.html
+++ b/index.html
@@ -427,8 +427,22 @@
   <main class="main">
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
-      <img src="assets/img/SwastikDharpure.webp" alt="Swastik Dharpure, Software Developer with abstract background"
-        data-aos="fade-in" class="" loading="eager">
+      <!-- <img src="assets/img/SwastikDharpure.webp" alt="Swastik Dharpure, Software Developer with abstract background"
+        data-aos="fade-in" class="" loading="eager"> -->
+
+        <picture>
+  <img
+    sizes="(max-width: 1248px) 100vw, 1248px"
+    srcset="
+      SwastikDharpure_200.webp 200w,
+      SwastikDharpure_504.webp 504w,
+      SwastikDharpure_683.webp 683w,
+      SwastikDharpure_872.webp 872w,
+      SwastikDharpure_1248.webp 1248w"
+    src="SwastikDharpure_1248.webp"
+    alt="Swastik Dharpure, Software Developer with abstract background"
+    loading="eager">
+</picture>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Swastik Dharpure</h2>
