add in website bg image responsive add css

--- a/index.html
+++ b/index.html
@@ -360,7 +360,10 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <!-- Main CSS File -->
-  <link href="assets/css/main.min.css" rel="stylesheet">
+  <!-- <link href="assets/css/main.min.css" rel="stylesheet"> -->
+   <link rel="preload" href="assets/css/main.min.css" as="style" onload="this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="assets/css/main.min.css"></noscript>
+
 
 </head>
 
