add in website bg image responsive add css

--- a/index.html
+++ b/index.html
@@ -1321,6 +1321,12 @@
     content: "+";
   }
   
+  @font-face {
+  font-family: 'bootstrap-icons';
+  src: url('../fonts/bootstrap-icons.woff2') format('woff2');
+  font-display: swap;
+}
+
 </style>
 <script defer>
   document.getElementById("contact-form").addEventListener("submit", function(e) {
