--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
   <!-- Main CSS File -->
   <!-- <link href="assets/css/main.min.css" rel="stylesheet"> -->
 
+  <!-- <link rel="preload"  href="assets/vendor/bootstrap/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'"> -->
   <link rel="preload" href="assets/vendor/glightbox/css/glightbox.min.css" as="style" onload="this.rel='stylesheet'">
 <link rel="preload" href="assets/vendor/swiper/swiper-bundle.min.css" as="style" onload="this.rel='stylesheet'">
 <link rel="preload" href="assets/vendor/aos/aos.css" as="style" onload="this.rel='stylesheet'">
