--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
   
   <!-- Preload Hero Image -->
-  <link rel="preload" as="image" href="assets/img/SwastikDharpure.webp">
+  <!-- <link rel="preload" as="image" href="assets/img/SwastikDharpure.webp"> -->
 
   <!-- Favicon end---- -->
   <link rel="me" href="https://www.linkedin.com/in/swastikdharpure">
@@ -359,23 +359,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
   <!-- Main CSS File -->
-  <link href="assets/css/main.min.css" rel="stylesheet">
+  <!-- <link href="assets/css/main.min.css" rel="stylesheet"> -->
 
-  <!-- <link rel="preload"  href="assets/vendor/bootstrap/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'"> -->
-  <!-- <link rel="preload" href="assets/vendor/glightbox/css/glightbox.min.css" as="style" onload="this.rel='stylesheet'">
+   <link rel="preload"  href="assets/vendor/bootstrap/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'"> 
+  <link rel="preload" href="assets/vendor/glightbox/css/glightbox.min.css" as="style" onload="this.rel='stylesheet'">
 <link rel="preload" href="assets/vendor/swiper/swiper-bundle.min.css" as="style" onload="this.rel='stylesheet'">
 <link rel="preload" href="assets/vendor/aos/aos.css" as="style" onload="this.rel='stylesheet'">
 <link rel="preload" href="assets/vendor/bootstrap-icons/bootstrap-icons.css" as="style" onload="this.rel='stylesheet'">
 
 
    <link rel="preload" href="assets/css/main.min.css" as="style" onload="this.rel='stylesheet'">
-   <noscript><link rel="stylesheet" href="assets/css/main.min.css"></noscript> -->
+   <noscript><link rel="stylesheet" href="assets/css/main.min.css"></noscript>
 
 <link 
   href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" 
