add in website Thane metro compress image

--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
   <!-- Main CSS File -->
   <!-- <link href="assets/css/main.min.css" rel="stylesheet"> -->
 
-   <link rel="preload"  href="assets/vendor/bootstrap/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'"> 
-  <link rel="preload" href="assets/vendor/glightbox/css/glightbox.min.css" as="style" onload="this.rel='stylesheet'">
+<link rel="preload" href="assets/vendor/bootstrap/css/bootstrap.min.css" as="style" onload="this.rel='stylesheet'"> 
+<link rel="preload" href="assets/vendor/glightbox/css/glightbox.min.css" as="style" onload="this.rel='stylesheet'">
 <link rel="preload" href="assets/vendor/swiper/swiper-bundle.min.css" as="style" onload="this.rel='stylesheet'">
 <link rel="preload" href="assets/vendor/aos/aos.css" as="style" onload="this.rel='stylesheet'">
 <link rel="preload" href="assets/vendor/bootstrap-icons/bootstrap-icons.css" as="style" onload="this.rel='stylesheet'">
@@ -448,12 +448,12 @@
   <img
     sizes="(max-width: 1248px) 100vw, 1248px"
     srcset="
-      SwastikDharpure_200.webp 200w,
-      SwastikDharpure_504.webp 504w,
-      SwastikDharpure_683.webp 683w,
-      SwastikDharpure_872.webp 872w,
-      SwastikDharpure_1248.webp 1248w"
-    src="SwastikDharpure_1248.webp"
+  assets/img/SwastikDharpure_200.webp 200w,
+  assets/img/SwastikDharpure_504.webp 504w,
+  assets/img/SwastikDharpure_683.webp 683w,
+  assets/img/SwastikDharpure_872.webp 872w,
+  assets/img/SwastikDharpure_1248.webp 1248w"
+src="assets/img/SwastikDharpure_1248.webp"
     alt="Swastik Dharpure, Software Developer with abstract background"
     loading="eager">
 </picture>
