add in website Thane metro compress image

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
   
   <!-- Preload Hero Image -->
-  <!-- <link rel="preload" as="image" href="assets/img/SwastikDharpure.webp"> -->
+   <link rel="preload" as="image" href="assets/img/SwastikDharpure.webp"> 
 
   <!-- Favicon end---- -->
   <link rel="me" href="https://www.linkedin.com/in/swastikdharpure">
@@ -511,7 +511,7 @@ src="assets/img/SwastikDharpure_1248.webp"
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="rounded" alt="" loading="lazy">
+            <img src="assets/img/my-profile-img.jpg" class="rounded" alt="Swastik Dharpure Profile Picture" loading="lazy">
           </div>
           <div class="col-lg-8 content">
             <h2>Personal Information</h2>
