add in website seo json -ld

--- a/index.html
+++ b/index.html
@@ -134,14 +134,16 @@
           "author": { "@type": "Person", "name": "Client Name" },
           "datePublished": "2025-09-01",
           "reviewBody": "Swastik delivered high-quality ASP.NET projects on time.",
-          "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" }
+          "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" },
+          "itemReviewed": { "@type": "Person", "name": "Swastik Dharpure" }
         },
         {
           "@type": "Review",
           "author": { "@type": "Person", "name": "Client 2" },
           "datePublished": "2025-10-01",
           "reviewBody": "Delivered the project ahead of schedule with excellent quality.",
-          "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" }
+          "reviewRating": { "@type": "Rating", "ratingValue": "5", "bestRating": "5" },
+          "itemReviewed": { "@type": "Person", "name": "Swastik Dharpure" }
         }
       ],
       "aggregateRating": {
@@ -213,16 +215,8 @@
       "offers": {
         "@type": "Offer",
         "priceSpecification": [
-          {
-            "@type": "PriceSpecification",
-            "price": "500-1500",
-            "priceCurrency": "USD"
-          },
-          {
-            "@type": "PriceSpecification",
-            "price": "45000-135000",
-            "priceCurrency": "INR"
-          }
+          { "@type": "PriceSpecification", "price": "500-1500", "priceCurrency": "USD" },
+          { "@type": "PriceSpecification", "price": "45000-135000", "priceCurrency": "INR" }
         ],
         "url": "https://swastikdharpure.github.io/Portfolio/#contact"
       }
@@ -248,24 +242,9 @@
     {
       "@type": "BreadcrumbList",
       "itemListElement": [
-        {
-          "@type": "ListItem",
-          "position": 1,
-          "name": "Home",
-          "item": "https://swastikdharpure.github.io/Portfolio/"
-        },
-        {
-          "@type": "ListItem",
-          "position": 2,
-          "name": "Services",
-          "item": "https://swastikdharpure.github.io/Portfolio/#services"
-        },
-        {
-          "@type": "ListItem",
-          "position": 3,
-          "name": "Contact",
-          "item": "https://swastikdharpure.github.io/Portfolio/#contact"
-        }
+        { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://swastikdharpure.github.io/Portfolio/" },
+        { "@type": "ListItem", "position": 2, "name": "Services", "item": "https://swastikdharpure.github.io/Portfolio/#services" },
+        { "@type": "ListItem", "position": 3, "name": "Contact", "item": "https://swastikdharpure.github.io/Portfolio/#contact" }
       ]
     }
   ]
